style(2560): increased hero's h2's font size and container's w/ Increased glass card's container width. Increased socialLinks' sizes. Corrected decor circles' position in the Hero section. Increased rulesCards' width, its container's width and gap-x between them. Corrected decor circles' positions and sizes in the AboutUs section. Increased xxs decor circles' sizes in the ContactSection

--- a/src/styles/custom-breakpoints.css
+++ b/src/styles/custom-breakpoints.css
@@ -480,11 +480,15 @@
   .text-fluid-nav {
     font-size: 1.5rem;
   }
-  .heading-fluid-hero {
-    font-size: 6.5rem;
-  }
   #hero {
     height: 75dvh;
+  }
+  #hero h2 {
+    font-size: 6.5rem;
+    max-width: 84rem;
+  }
+  .glass-card {
+    font-size: 1.5rem;
   }
   .hero-cta-section p {
     font-size: 1.75rem;
@@ -511,6 +515,11 @@
     width: 20rem;
     height: 20rem;
     transform: translateX(-160%) translateY(40%);
+  }
+  .social-link-sm,
+  .social-link {
+    min-width: 5rem;
+    min-height: 5rem;
   }
   #pets .container {
     max-width: 1880px;
@@ -539,22 +548,29 @@
   .text-fluid-modal-desc {
     font-size: 1.25rem;
   }
-  .circle-md {
+  .rules-grid {
+    gap: 4rem;
+    max-width: 68rem;
+  }
+  .rule-card {
     width: 30rem;
-    height: 30rem;
-    transform: translateX(110%) translateY(-20%);
+  }
+  .about-circle-md {
+    width: 22rem;
+    height: 22rem;
+    transform: translateX(175%) translateY(45%);
   }
   .about-circle-xs {
-    width: 15rem;
-    height: 15rem;
-    transform: translateX(215%) translateY(5%);
+    width: 12rem;
+    height: 12rem;
+    transform: translateX(360%) translateY(80%);
   }
   .contact-label {
     font-size: 1.5rem;
   }
-  .circle-contact-xxs {
-    width: 3.5rem;
-    height: 3.5rem;
+  .circle-xxs {
+    width: 3rem;
+    height: 3rem;
   }
   .text-fluid-section-heading,
   .text-fluid-about-heading {
